--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <ul>
             <li><a href="">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Testimonial</a></li>
-            <li><a href="">contact</a></li>
+            <li><a href="#project">Projects</a></li>
+            <li><a href="#testimonial">Testimonial</a></li>
+            <li><a href="#contact">contact</a></li>
           </ul>
         </div>
         <i class="fa-solid fa-bars" onclick="showMenu()"></i>
@@ -129,7 +129,7 @@
        </section>
 
             <!-- my recent project -->
-       <section class="recent" id="recent">
+       <section href="project" class="recent" id="recent">
 
 
           <div  class="recent-box">
@@ -137,7 +137,7 @@
 
                     <div class="wrapper">
                         <div class="recent-item">
-                            <a href="https://veendhq"><img  src="image/vend.jpg" alt=""></a> 
+                            <a href="https://veendHQ"><img  src="image/vend.jpg" alt=""></a> 
 
                              <a href="https://veendhq" class="btn">Review project</a>
                              <!-- <div class="rating">
@@ -193,7 +193,7 @@
 
  <!-- my testimonials -->
 
-        <section class="testimonial" id="testimonial">
+        <section href="testimonial"class="testimonial" id="testimonial">
 
 
           <div class="testimonial-box">
@@ -256,7 +256,7 @@
 
 <!-- my contact section -->
 
-       <section  class=" contact" id="contact">
+       <section href="contact" class=" contact" id="contact">
            <h2 class="heading">Contact <span>Me</span></h2>
 
            <form action="#">
