--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <ul>
             <li><a href="">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#project">Projects</a></li>
+            <li><a href="#recent">Projects</a></li>
             <li><a href="#testimonial">Testimonial</a></li>
             <li><a href="#contact">contact</a></li>
           </ul>
@@ -68,10 +68,10 @@
                
 
                <div class="social-media">
-                    <a href="#"><i class='bx bxl-facebook'></i></a>
-                    <a href="#"><i class='bx bxl-twitter' ></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
-                    <a href="#"><i class='bx bxl-discord-alt'></i></a>
+                    <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-twitter' ></i></a>
+                    <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qrclass='bx bxl-instagram'></i></a>
+                    <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-discord-alt'></i></a>
                </div><br>
                <a href="#" class="btn">Check CV</a>
           </div>
@@ -129,7 +129,7 @@
        </section>
 
             <!-- my recent project -->
-       <section href="project" class="recent" id="recent">
+       <section href="recent" class="recent" id="recent">
 
 
           <div  class="recent-box">
@@ -279,10 +279,10 @@
 
        <footer class="footer">
             <div class="social">
-                 <a href="#"><i class='bx bxl-facebook'></i></a>
-                 <a href="#"><i class='bx bxl-twitter' ></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
-                    <a href="#"><i class='bx bxl-discord-alt'></i></a>
+                 <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-facebook'></i></a>
+                 <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-twitter' ></i></a>
+                    <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-instagram'></i></a>
+                    <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-discord-alt'></i></a>
             </div>
             <p class="copyright">
                 &copy; paul owurre . All Rights Reserved
