--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <div class="recent-item">
                             <a href="https://veendHQ"><img  src="image/vend.jpg" alt=""></a> 
 
-                             <a href="https://veendhq" class="btn">Review project</a>
+                             <a href="https://veendHQ" class="btn">Review project</a>
                              <!-- <div class="rating">
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
