--- a/index.html
+++ b/index.html
@@ -216,15 +216,15 @@
                         </div>
 
                         <div class="testimonial-item">
-                             <img src="image/ok.jpg" alt="">
+                             <img src="image/i-3.jpg" alt="">
 
-                             <h2>James</h2>
+                             <h2>Ola</h2>
                              <div class="rating">
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
-                                <i class="bx bxs-star" id="star"></i>
+                                <i class="bx bxs-star" id=" half star"></i>
                              </div>
 
                              <p>very reliable, no problems so far. Highly recommended!.</p>
@@ -232,15 +232,15 @@
 
 
                         <div class="testimonial-item">
-                             <img src="image/ok.jpg" alt="">
+                             <img src="image/i-3.jpg" alt="">
 
-                             <h2>Deborah</h2>
+                             <h2>Godwin</h2>
                              <div class="rating">
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
-                                <i class="bx bxs-star" id="star"></i>
+<!--                                 <i class="bx bxs-star" id="star"></i> -->
                              </div>
 
                              <p>oustanding service! professional, reliable, and exceeded all expectations..</p>
