--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
-                                <i class="bx bxs-star" id=" half star"></i>
+<!--                                 <i class="bx bxs-star" id=" star"></i> -->
                              </div>
 
                              <p>very reliable, no problems so far. Highly recommended!.</p>
