--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <div class="testimonial-item">
                              <img src="image/i-2.jpg" alt="">
 
-                             <h2>David</h2>
+                             <h2>Chidinma</h2>
                              <div class="rating">
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
@@ -218,7 +218,7 @@
                         <div class="testimonial-item">
                              <img src="image/i-3.jpg" alt="">
 
-                             <h2>Ola</h2>
+                             <h2>Bolu</h2>
                              <div class="rating">
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
@@ -234,7 +234,7 @@
                         <div class="testimonial-item">
                              <img src="image/i-1.jpg" alt="">
 
-                             <h2>Godwin</h2>
+                             <h2>Vanessa</h2>
                              <div class="rating">
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
