--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                <div class="social-media">
                     <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-twitter' ></i></a>
-                    <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qrclass='bx bxl-instagram'></i></a>
+                    <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-instagram'></i></a>
                     <a href="https://www.instagram.com/owurre__paul?igsh=Y256N3p2ZGhmdHEx&utm_source=qr"><i class='bx bxl-discord-alt'></i></a>
                </div><br>
                <a href="#" class="btn">Check CV</a>
