--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 
                     <div class="wrapper">
                         <div class="testimonial-item">
-                             <img src="image/i-2.jpg" alt="">
+<!--                              <img src="image/i-2.jpg" alt=""> -->
 
-                             <h2>Chidinma</h2>
+                             <h2>Ola</h2>
                              <div class="rating">
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
@@ -216,7 +216,7 @@
                         </div>
 
                         <div class="testimonial-item">
-                             <img src="image/i-3.jpg" alt="">
+<!--                              <img src="image/i-3.jpg" alt=""> -->
 
                              <h2>Bolu</h2>
                              <div class="rating">
@@ -232,9 +232,9 @@
 
 
                         <div class="testimonial-item">
-                             <img src="image/i-1.jpg" alt="">
+<!--                              <img src="image/i-1.jpg" alt=""> -->
 
-                             <h2>Vanessa</h2>
+                             <h2>Mr Uche</h2>
                              <div class="rating">
                                 <i class="bx bxs-star" id="star"></i>
                                 <i class="bx bxs-star" id="star"></i>
