--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
                     <div class="wrapper">
                         <div class="recent-item">
-                            <a href="https://veendHQ"><img  src="image/vend.jpg" alt=""></a> 
+                            <a href=https://VeendHQ.com><img  src="image/vend.jpg" alt=""></a> 
 
                              <a href="https://veendHQ" class="btn">Review project</a>
                              <!-- <div class="rating">
