--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                </div>
 
                <div class="home-content">
-                    <h3>Hello, Myself</h3>
+                    <h3>Hello, i'm</h3>
                     <h1>Paul Owurre</h1>
-                    <h3>And i am a <span class="multiple-text"></span></h3>
+                    <h3>And i'm a <span class="multiple-text"></span></h3>
                     <p>Im a passionate Full-stack web developer with expertise in <br> creating
                     responsive, scalable applications, specializing in front-end and back-end development.</p><br><br>
                
