--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
                                 <i class="bx bxs-star" id="star"></i>
                              </div>
 
-                             <p>Efficient, and ddeliverd perfect results. Thank you.</p>
+                             <p>"Navigating this site was smooth! It provided everything I needed with clarity and ease. I was impressed with the prompt,
+				     helpful responses and how well the tools supported my project. I'll definitely return for future needs!"</p>
                         </div>
 
                         <div class="testimonial-item">
@@ -227,7 +228,8 @@
 <!--                                 <i class="bx bxs-star" id=" star"></i> -->
                              </div>
 
-                             <p>very reliable, no problems so far. Highly recommended!.</p>
+                             <p>"The website is straightforward, clean, and exceptionally user-friendly. I appreciated the layout and found the resources extremely helpful.
+				     My experience was efficient and stress-free, which is rare when looking for complex information!"</p>
                         </div>
 
 
@@ -243,7 +245,8 @@
 <!--                                 <i class="bx bxs-star" id="star"></i> -->
                              </div>
 
-                             <p>oustanding service! professional, reliable, and exceeded all expectations..</p>
+                             <p>"This site was a lifesaver! I found exactly what I was looking for without any problem. The support was incredible, too.
+				     It's so refreshing to use a website that's both comprehensive and easy to navigate!"</p>
                         </div>
 
 
