--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        <section href="about" class="about" id="about">
               <div class="about-content">
                    <h2 class="heading">About <span>me</span></h2>
-                   <h3>i am a <span>Frontend Developer</span></h3>
+                   <h3>I'm a <span>Frontend Developer</span></h3>
                   <!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod
                    tempor incididunt ut labore et dolore magna aliqua</p> -->
                    <p>As a full-stack developer with over<b> 5 years of experience</b>, I<br> specialize in crafting responsive and engaging digital experience. I am skilled in a range of technologies,<br> including HTML, CSS, Javascript, and frameworks like React and Anguler for front-end development. My passion<br> for problem-solving drives me to stay updated on the latest trends and best practicies in web-development, ensuring<br> that I deliver modern, high-performance solutions tailored to each client's unique needs. 
